fix alignment buttons

--- a/src/style/player.scss
+++ b/src/style/player.scss
@@ -60,6 +60,9 @@ hr {
 			width: 31% !important;
 		}
 	}
+	&.chat-side-left {
+		flex-direction: row-reverse;
+	}
 }
 
 
